--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.1.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^3.0.8",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-hot-toast": "^2.2.0",
