--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-speech-recognition": "^3.9.0",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
